<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D85656"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/email_text"
        android:layout_width="285dp"
        android:layout_height="43dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="283dp"
        android:layout_height="51dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:text="Email"
        app:layout_constraintBottom_toTopOf="@+id/email_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/password_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="283dp"
        android:layout_height="43dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/button_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="265dp"
        android:text="@string/not_account_yet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <Button
        android:id="@+id/button_create"
        android:layout_width="89dp"
        android:layout_height="38dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="256dp"
        android:background="@android:color/transparent"
        android:text="@string/create"
        android:textColor="@color/button_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>